@@ -1132,3 +1132,4 @@ The following functions accept any form a path. The INI and language INI functio
             Added: OSDMenuKeyboard_ChangeKeypad() to change or suppress keypads (except Standard and CAPS)
             Added: OSDMenuKeyboard_SetKeypadMode() to change the default starting keypad mode
             Fixed: Align keyboard title horizontally and vertically centered (2 px to the left and 3 px up)
+            Fixed: Align key descriptions centered (1 px to the right)
